# minimum-spanning-tree

./: CMakeLists.txt  README.md  SocialNetwork.cpp  SocialNetwork.h  main.cpp  testFile.txt
test/: CMakeLists.txt  MinimumSpinningTreeTest.cpp  SocialNetworkTest.cpp
